--------
v4.0-git
--------



-----------
v3.0.13-git
-----------

[jan] Update Hungarian translation (Zoltán Németh <nemeth.zoltan@etit.hu>).
[jan] Only connect to LDAP driver for read/write requests (Dominique Lalot
      <dom.lalot@gmail.com>, Request #11082).
[mjr] Fix bug that caused time shifting of contact birthday and anniversary
      values from ActiveSync devices for users in certain timezones.


-------
v3.0.12
-------

[mjr] Ensure contact lists are always populated with their members (Bug
      #10961).
[jan] Fix SyncML compatibility with work/home phone numbers and newer Funambol
      clients (Bug #10912).
[mjr] Implement more flexible ActiveSync synchronization of names and
      addresses.
[jan] Fix address book sorting in preferences (Bug #10897).
[mms] Improve navigation when editing group entries.


-------
v3.0.11
-------

[jan] Set VOICE parameter when exporting phone numbers to vCard (Request
      #10349).
[jan] Fix importing vCards with empty X-ANNIVERSARY attributes (Bug #10557).
[jan] Update Japanese translation (Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>).


-------
v3.0.10
-------

[mjr] Add the ability to specify the fields to return from contacts/search.
[jan] Fix importing contacts with composite fields.
[jan] Fix LDAP connection test (Bug #10554).
[gwr] Avoid including the owner name into the default share (Kolab backend).


------
v3.0.9
------

[rla] Turba LDAP Driver now only rewrites changed attributes (Bug #9343).
[mjr] Run attribute values through decode_attribute hook when exporting.
[mjr] Ensure encode_attribute hook is called on imported objects.
[mjr] Improve handling of removeUserData.
[mjr] Honor auto_create configuration setting (qoole.horde@lillimoth.com, Bug
      #10452)
[jan] Don't allow to search binary fields.


------
v3.0.8
------

[jan] Fix attribute name for assistant phone (Bug #10449).


------
v3.0.7
------

[jan] Add missing migration script (Bug #10436).


------
v3.0.6
------
