@@ -2,6 +2,7 @@
 v4.0-git
 --------
 
+[jan] Add parameters to specify field size of phone and email fields.
 
 
 -----------
